--- a/experimental/dp_consistency/src/main/python/tools/BUILD.bazel
+++ b/experimental/dp_consistency/src/main/python/tools/BUILD.bazel
@@ -4,16 +4,16 @@ load("@rules_python//python:py_binary.bzl", "py_binary")
 package(default_visibility = ["//visibility:public"])
 
 filegroup(
-    name = "correct_origin_report_pyzip",
+    name = "post_process_origin_report_pyzip",
     srcs = [
-        "//experimental/dp_consistency/src/main/python/tools:correct_origin_report",
+        "//experimental/dp_consistency/src/main/python/tools:post_process_origin_report",
     ],
     output_group = "python_zip_file",
 )
 
 py_binary(
-    name = "correct_origin_report",
-    srcs = ["correct_origin_report.py"],
+    name = "post_process_origin_report",
+    srcs = ["post_process_origin_report.py"],
     deps = [
         "//experimental/dp_consistency/src/main/proto/reporting:report_summary_py_pb2",
         "//experimental/dp_consistency/src/main/python/report",
