--- a/experimental/dp_consistency/src/test/python/tools/BUILD.bazel
+++ b/experimental/dp_consistency/src/test/python/tools/BUILD.bazel
@@ -8,6 +8,6 @@ py_test(
     ],
     deps = [
         "//experimental/dp_consistency/src/main/proto/reporting:report_summary_py_pb2",
-        "//experimental/dp_consistency/src/main/python/tools:correct_origin_report",
+        "//experimental/dp_consistency/src/main/python/tools:post_process_origin_report",
     ],
 )
