--- a/experimental/dp_consistency/src/main/kotlin/reporting/BUILD.bazel
+++ b/experimental/dp_consistency/src/main/kotlin/reporting/BUILD.bazel
@@ -1,16 +1,15 @@
-load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_binary", "kt_jvm_library")
+load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
 package(default_visibility = ["//visibility:public"])
 
-kt_jvm_binary(
+kt_jvm_library(
     name = "report_post_processing",
     srcs = ["ReportPostProcessing.kt"],
-    main_class = "experimental.dp_consistency.src.main.kotlin.reporting.ReportPostProcessing",
     resources = [
         "//experimental/dp_consistency/src/main/python/tools:post_process_origin_report_pyzip",
     ],
     deps = [
-        ":report_converter",
+        ":report_conversion",
         "//experimental/dp_consistency/src/main/proto/reporting:report_summary_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/reporting/v2alpha:report_kt_jvm_proto",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
@@ -18,8 +17,8 @@ kt_jvm_binary(
 )
 
 kt_jvm_library(
-    name = "report_converter",
-    srcs = ["ReportConverter.kt"],
+    name = "report_conversion",
+    srcs = ["ReportConversion.kt"],
     deps = [
         "//experimental/dp_consistency/src/main/proto/reporting:report_summary_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/reporting/v2alpha:report_kt_jvm_proto",
