--- a/experimental/dp_consistency/src/test/kotlin/org/wfanet/measurement/reporting/postprocess/BUILD.bazel
+++ b/experimental/dp_consistency/src/test/kotlin/org/wfanet/measurement/reporting/postprocess/BUILD.bazel
@@ -5,9 +5,7 @@ package(default_testonly = True)
 kt_jvm_test(
     name = "report_post_processing_test",
     srcs = ["ReportPostProcessingTest.kt"],
-    data = [
-        "//experimental/dp_consistency/src/test/kotlin/org/wfanet/measurement/reporting/postprocess:sample_report_large.json",
-    ],
+    data = [":sample_reports"],
     test_class = "org.wfanet.measurement.reporting.postprocessing.ReportPostProcessingTest",
     deps = [
         "//experimental/dp_consistency/src/main/kotlin/org/wfanet/measurement/reporting/postprocess:report_post_processing",
@@ -25,11 +23,7 @@ kt_jvm_test(
 kt_jvm_test(
     name = "report_conversion_test",
     srcs = ["ReportConversionTest.kt"],
-    data = [
-        "//experimental/dp_consistency/src/test/kotlin/org/wfanet/measurement/reporting/postprocess:report_with_failed_measurement.json",
-        "//experimental/dp_consistency/src/test/kotlin/org/wfanet/measurement/reporting/postprocess:report_with_unspecified_state.json",
-        "//experimental/dp_consistency/src/test/kotlin/org/wfanet/measurement/reporting/postprocess:sample_report_small.json",
-    ],
+    data = [":sample_reports"],
     test_class = "org.wfanet.measurement.reporting.postprocessing.ReportConversionTest",
     deps = [
         "//experimental/dp_consistency/src/main/kotlin/org/wfanet/measurement/reporting/postprocess:report_conversion",
@@ -41,4 +35,9 @@ kt_jvm_test(
         "@wfa_common_jvm//imports/kotlin/kotlin/test",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
     ],
+)
+
+filegroup(
+    name = "sample_reports",
+    srcs = glob(["*.json"]),
 )
