fix: Shard MeasurementsByContinuationToken index to avoid hotspotting
From the [Cloud Spanner documentation on secondary indexes](https://cloud.google.com/spanner/docs/secondary-indexes):

> Be aware that using the commit timestamp column as the first part of the secondary index can create hotspots and reduce write performance.

Sharding is one of the recommendations given for how to avoid hotspotting.

--- a/src/main/resources/kingdom/spanner/changelog.yaml
+++ b/src/main/resources/kingdom/spanner/changelog.yaml
@@ -72,3 +72,6 @@ databaseChangeLog:
 - include:
     file: drop-json-columns.sql
     relativeToChangeLogFile: true
+- include:
+    file: shard-measurements-by-continuation-token.sql
+    relativeToChangeLogFile: true
