--- a/src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
@@ -9,15 +9,15 @@ package(default_visibility = ["//visibility:public"])
 
 IMPORT_PREFIX = "/src/main/proto"
 
-# Resources and shared message types.
+#Resources and shared message types.
 
 proto_library(
     name = "work_item_proto",
     srcs = ["work_item.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
-        "@com_google_protobuf//:any_proto",
         "@com_google_googleapis//google/api:resource_proto",
+        "@com_google_protobuf//:any_proto",
     ],
 )
 
@@ -26,7 +26,7 @@ kt_jvm_proto_library(
     deps = [":work_item_proto"],
 )
 
-# Services.
+#Services.
 
 proto_library(
     name = "work_items_service_proto",
@@ -34,6 +34,8 @@ proto_library(
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
         ":work_item_proto",
+        "@com_google_googleapis//google/api:annotations_proto",
+        "@com_google_googleapis//google/api:client_proto",
         "@com_google_googleapis//google/api:field_behavior_proto",
     ],
 )
