--- a/src/test/kotlin/org/wfanet/measurement/kingdom/batch/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/kingdom/batch/BUILD.bazel
@@ -6,13 +6,19 @@ kt_jvm_test(
     associates = [
         "//src/main/kotlin/org/wfanet/measurement/kingdom/batch:measurement_system_prober",
     ],
+    data = [
+        "//src/main/k8s/testing/secretfiles:root_certs",
+        "//src/main/k8s/testing/secretfiles:secret_files",
+    ],
     test_class = "org.wfanet.measurement.kingdom.batch.MeasurementSystemProberTest",
     deps = [
+        "//src/main/kotlin/org/wfanet/measurement/testing:requisitions",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/org/junit",
         "@wfa_common_jvm//imports/kotlin/kotlin/test",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
         "@wfa_common_jvm//imports/kotlin/org/mockito/kotlin",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/testing",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/identity",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/testing",
     ],
