--- a/src/main/k8s/dev/BUILD.bazel
+++ b/src/main/k8s/dev/BUILD.bazel
@@ -422,6 +422,7 @@ kustomization_dir(
     srcs = [
         "synthetic_generator_config_files_kustomization.yaml",
         "//src/main/k8s/testing/data:synthetic_generation_specs_large",
+        "//src/main/k8s/testing/data:synthetic_generation_specs_us",
     ],
     renames = {
         "synthetic_generator_config_files_kustomization.yaml": "kustomization.yaml",
