Added queue.proto with resource reference annotation Reset module.bazel.lock file to its original content Fix lint.yml

--- a/src/main/proto/api-linter.yaml
+++ b/src/main/proto/api-linter.yaml
@@ -48,10 +48,10 @@
 - included_paths:
   - 'wfa/measurement/securecomputation/controlplane/v1*/*.proto'
   disabled_rules:
-  - 'core::0133::request-id-field'
+  # Not all methods are useful for all resource types.
   - 'core::0121::resource-must-support-get'
   - 'core::0121::resource-must-support-list'
-  - 'core::0203::field-behavior-required'
-  - 'core::0203::resource-name-identifier'
+
+  # gRPC-only. REST/HTTP not supported.
   - 'core::0127::http-annotation'
   - 'core::0133::http-uri-parent'
