--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/teesdk/cloudstorage/v1alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/teesdk/cloudstorage/v1alpha/BUILD.bazel
@@ -1,20 +1,17 @@
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
 package(default_visibility = [
-    "//src/main/kotlin/org/wfanet/measurement/secure_computation:__subpackages__",
-    "//src/test/kotlin/org/wfanet/measurement/secure_computation:__subpackages__",
+    "//src/main/kotlin/org/wfanet/measurement/securecomputation:__subpackages__",
+    "//src/test/kotlin/org/wfanet/measurement/securecomputation:__subpackages__",
 ])
 
 kt_jvm_library(
-    name = "cloud_storage",
-    srcs = ["CloudStorage.kt"],
-)
-
-kt_jvm_library(
-    name = "gcs_storage_client",
-    srcs = ["GcsStorageClient.kt"],
+    name = "recordio_storage_client",
+    srcs = ["RecordioStorageClient.kt"],
     deps = [
-        ":cloud_storage",
         "@wfa_common_jvm//imports/java/com/google/cloud/storage",
+        "@wfa_common_jvm//imports/java/com/google/crypto/tink",
+        "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/storage:client",
     ],
 )
