--- a/src/main/proto/api-linter.yaml
+++ b/src/main/proto/api-linter.yaml
@@ -15,6 +15,7 @@
 - included_paths:
   - 'wfa/measurement/reporting/**/*.proto'
   - 'wfa/measurement/system/**/*.proto'
+  - 'wfa/measurement/securecomputation/controlplane/**/*.proto'
   disabled_rules:
   - 'core::0191::java-package'
   - 'core::0146::any'
@@ -43,3 +44,14 @@
   - 'core::0133::request-id-field'
   - 'core::0121::resource-must-support-get'
   - 'core::0203::field-behavior-required'
+
+- included_paths:
+  - 'wfa/measurement/securecomputation/controlplane/v1*/*.proto'
+  disabled_rules:
+  # Not all methods are useful for all resource types.
+  - 'core::0121::resource-must-support-get'
+  - 'core::0121::resource-must-support-list'
+
+  # gRPC-only. REST/HTTP not supported.
+  - 'core::0127::http-annotation'
+  - 'core::0133::http-uri-parent'
