--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -219,6 +219,7 @@ maven.install(
         "com.google.cloud:google-cloud-security-private-ca",
         # TODO(googleapis/java-cloud-bom#5279): Remove when managed by BOM.
         "com.google.apis:google-api-services-storage:v1-rev20240706-2.0.0",
+        "com.google.cloud:google-cloud-kms",
 
         # AWS
         "software.amazon.awssdk:acmpca",
