--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -37,7 +37,6 @@ bazel_dep(
 )
 bazel_dep(
     name = "common-jvm",
-    version = "0.95.0",
     repo_name = "wfa_common_jvm",
 )
 bazel_dep(
@@ -338,4 +337,14 @@ http_archive(
 single_version_override(
     module_name = "boringssl",
     version = BORINGSSL_VERSION,
+)
+
+# DO_NOT_SUBMIT(world-federation-of-advertisers/common-jvm#281): Use version.
+archive_override(
+    module_name = "common-jvm",
+    integrity = "sha256-0WgRNNu5tEIA7eGSR34w+sfy/z/1xeK6sKGyWzk2V+k=",
+    strip_prefix = "common-jvm-35ba0d8bbbf3e80c5934ed069bdff501085732f6",
+    urls = [
+        "https://github.com/world-federation-of-advertisers/common-jvm/archive/35ba0d8bbbf3e80c5934ed069bdff501085732f6.tar.gz",
+    ],
 )
