Define Access API.

--- a/.github/workflows/api-lint.yml
+++ b/.github/workflows/api-lint.yml
@@ -59,3 +59,4 @@ jobs:
 
     - run: tools/api-lint wfa/measurement/system
     - run: tools/api-lint wfa/measurement/securecomputation
+    - run: tools/api-lint wfa/measurement/access
