--- a/src/main/k8s/dev/synthetic_generator_config_files_kustomization.yaml
+++ b/src/main/k8s/dev/synthetic_generator_config_files_kustomization.yaml
@@ -19,3 +19,6 @@ configMapGenerator:
   - synthetic_event_group_spec_us_1.textproto
   - synthetic_event_group_spec_us_2.textproto
   - synthetic_event_group_spec_us_3.textproto
+  - synthetic_event_group_spec_us_4.textproto
+  - synthetic_event_group_spec_us_5.textproto
+  - synthetic_event_group_spec_us_6.textproto
