--- a/src/main/k8s/dev/synthetic_generator_config_files_kustomization.yaml
+++ b/src/main/k8s/dev/synthetic_generator_config_files_kustomization.yaml
@@ -22,3 +22,6 @@ configMapGenerator:
   - synthetic_event_group_spec_us_4.textproto
   - synthetic_event_group_spec_us_5.textproto
   - synthetic_event_group_spec_us_6.textproto
+  - synthetic_event_group_spec_us_7.textproto
+  - synthetic_event_group_spec_us_8.textproto
+  - synthetic_event_group_spec_us_9.textproto
