--- a/src/test/kotlin/org/wfanet/measurement/kingdom/batch/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/kingdom/batch/BUILD.bazel
@@ -14,6 +14,8 @@ kt_jvm_test(
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/testing:requisitions",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
+        "@wfa_common_jvm//imports/java/io/opentelemetry/sdk",
+        "@wfa_common_jvm//imports/java/io/opentelemetry/sdk/testing",
         "@wfa_common_jvm//imports/java/org/junit",
         "@wfa_common_jvm//imports/kotlin/kotlin/test",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
