fix: Allow Bazel workflows called from update-cmms to access secrets
This fixes BuildBuddy authentication issues in the update-cmms workflow.

--- a/.github/workflows/configure-kingdom.yml
+++ b/.github/workflows/configure-kingdom.yml
@@ -83,6 +83,7 @@ jobs:
         run: |
           cat << EOF > ~/.bazelrc
           common --config=ci
+          build --remote_download_outputs=toplevel  # Need build output.
           common --config=ghcr
           build --define "image_tag=$IMAGE_TAG"
           build --define "google_cloud_project=$GCLOUD_PROJECT"
