--- a/.github/workflows/configure-aws-duchy.yml
+++ b/.github/workflows/configure-aws-duchy.yml
@@ -112,6 +112,7 @@ jobs:
       run: |
         cat << EOF > ~/.bazelrc
         common --config=ci
+        build --remote_download_outputs=toplevel  # Need build output.
         common --config=ghcr
         build --define image_tag=$IMAGE_TAG
         build --define kingdom_system_api_target=$KINGDOM_SYSTEM_API_TARGET
