fix some issues

--- a/src/test/kotlin/org/wfanet/measurement/integration/k8s/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/integration/k8s/BUILD.bazel
@@ -13,11 +13,13 @@ kt_jvm_library(
     srcs = ["AbstractCorrectnessTest.kt"],
     data = [
         "//src/main/k8s/testing/secretfiles:mc_trusted_certs.pem",
+        "//src/main/k8s/testing/secretfiles:reporting_root.pem",
         "//src/main/k8s/testing/secretfiles:secret_files",
     ],
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/integration/common:configs",
         "//src/main/kotlin/org/wfanet/measurement/loadtest/measurementconsumer:simulator",
+        "//src/main/kotlin/org/wfanet/measurement/loadtest/reporting:simulator",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/org/junit",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
@@ -58,6 +60,7 @@ kt_jvm_library(
         "//src/main/kotlin/org/wfanet/measurement/integration/common:synthetic_generation_specs",
         "//src/main/kotlin/org/wfanet/measurement/loadtest/config:vid_sampling",
         "//src/main/kotlin/org/wfanet/measurement/loadtest/measurementconsumer:synthetic_generator_event_query",
+        "//src/main/kotlin/org/wfanet/measurement/loadtest/reporting:simulator",
         "//src/main/proto/wfa/measurement/integration/k8s/testing:correctness_test_config_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/org/junit",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
@@ -74,6 +77,8 @@ expand_template(
         "{kingdom_public_api_cert_host}": "localhost",
         "{mc_name}": TEST_K8S_SETTINGS.mc_name,
         "{mc_api_key}": TEST_K8S_SETTINGS.mc_api_key,
+        "{reporting_public_api_target}": "$(reporting_public_api_target)",
+        "{reporting_public_api_cert_host}": "localhost",
     },
     tags = ["manual"],
     template = "correctness_test_config.tmpl.textproto",
