feat: Use Bouncy Castle to generate CSRs for AWS private CA.

--- a/src/main/kotlin/org/wfanet/panelmatch/client/deploy/example/aws/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/panelmatch/client/deploy/example/aws/BUILD.bazel
@@ -19,6 +19,8 @@ kt_jvm_library(
         "@wfa_common_jvm//imports/java/picocli",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/aws/s3",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:security_provider",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:signatures",
     ],
 )
 
