--- a/src/main/kotlin/org/wfanet/panelmatch/common/certificates/gcloud/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/panelmatch/common/certificates/gcloud/BUILD.bazel
@@ -18,6 +18,7 @@ kt_jvm_library(
         "//src/main/proto/wfa/measurement/api/v2alpha:certificates_service_kt_jvm_proto",
         "//src/main/proto/wfa/panelmatch/common/certificates:signing_keys_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:pem_io",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:security_provider",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/storage:client",
     ],
