--- a/src/main/kotlin/org/wfanet/panelmatch/common/certificates/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/panelmatch/common/certificates/BUILD.bazel
@@ -7,7 +7,12 @@ package(default_visibility = [
 
 kt_jvm_library(
     name = "certificates",
-    srcs = glob(["*.kt"]),
+    srcs = [
+        "CertificateAuthority.kt",
+        "CertificateManager.kt",
+        "KingomlessCertificateManager.kt",
+        "V2AlphaCertificateManager.kt",
+    ],
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:resource_key",
         "//src/main/kotlin/org/wfanet/panelmatch/client/common",
@@ -21,7 +26,15 @@ kt_jvm_library(
         "//src/main/proto/wfa/panelmatch/common/certificates:signing_keys_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
         "@wfa_common_jvm//imports/kotlin/com/google/protobuf/kotlin",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:pem_io",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:security_provider",
+    ],
+)
+
+kt_jvm_library(
+    name = "generate_csr",
+    srcs = ["GenerateCsr.kt"],
+    deps = [
+        "//imports/java/org/bouncycastle/bcpkix",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:signatures",
     ],
 )
